--- a/_instructor/events/dynamodb-streams/serverless.yml
+++ b/_instructor/events/dynamodb-streams/serverless.yml
@@ -12,14 +12,14 @@ provider:
         - dynamodb:PutItem
         - dynamodb:Scan
         # WORKSHOP_START
-        # Step 3. In this_file, the IAM role must be updated to include `dynamodb:DeleteItem` permission
+        # Step 3. In this_file, the `iamRoleStatements` must be updated to include `dynamodb:DeleteItem` permission to allow for the `delete` function to remove items from the dynamo table.
         # WORKSHOP_END
         # FINAL_START
         # New DeleteItem permission for `delete` function
         - dynamodb:DeleteItem
         # FINAL_END
         # WORKSHOP_START
-        # Step 7. In this_file, You will need the `GetRecords`, `GetShardIterator`, `DescribeStream`, `ListStreams` permissions for Dynamo Stream access.
+        # Step 7. In this_file, We need to update the dynamodb IAM permissions `GetRecords`, `GetShardIterator`, `DescribeStream`, `ListStreams` permissions for functions to access the Dynamo Stream.
         # WORKSHOP_END
         # FINAL_START
         # New permissions needed for stream
@@ -47,7 +47,7 @@ functions:
           cors: true
   # WORKSHOP_START
   # Add a `delete` function triggered by an http POST
-  # Step 1. In this_file, Add a `delete` function triggered by an http POST event #
+  # Step 2. In this_file, add the `delete` function exported from `handler.js` and attach it to an http POST event. #
   # WORKSHOP_END
   # FINAL_START
   # New delete function
@@ -60,7 +60,7 @@ functions:
           cors: true
   # FINAL_END
   # WORKSHOP_START
-  # Step 8. Add a `handleStream` function triggered by a dynamo Stream http://bit.ly/2mhkJne in this_file
+  # Step 8. In this_file, add a `handleStream` function triggered by a dynamo Stream. [See stream docs](http://bit.ly/2mhkJne)
   # WORKSHOP_END
   # FINAL_START
   # New stream handler function
@@ -89,7 +89,7 @@ resources:
           ReadCapacityUnits: 1
           WriteCapacityUnits: 1
         # WORKSHOP_START
-        # Step 6. add a stream to the dynamoDB table by setting the `StreamSpecification` property on the `Properties` of the CloudFormation declaration of the table. Set `StreamViewType: NEW_AND_OLD_IMAGES`
+        # Step 6. Now, add a stream to the dynamoDB table by setting the `StreamSpecification` property on the `Properties` of the CloudFormation declaration of the `myDynamoTable` table. Set `StreamViewType: NEW_AND_OLD_IMAGES`. [CloudFormation dynamob docs](http://amzn.to/2txNq3a)
         # WORKSHOP_END
         # FINAL_START
         StreamSpecification:
