update sns basic docs

--- a/_instructor/events/sns/sns-basic/serverless.yml
+++ b/_instructor/events/sns/sns-basic/serverless.yml
@@ -1,8 +1,7 @@
 service: aws-sns-basic
 
-
 # WORKSHOP_START
-# Step 1. In this_file, Define a `custom` block and add `topicName`. We will use this reference in other areas of serverless.yml #
+# Step 1. In this_file, Define a `custom` block and add `topicName`. We will use this reference in other areas of `serverless.yml` #
 # WORKSHOP_END
 # FINAL_START
 custom:
