--- a/lessons/events/sns/sns-basic/serverless.yml
+++ b/lessons/events/sns/sns-basic/serverless.yml
@@ -6,5 +6,4 @@ provider:
   name: aws
   runtime: nodejs6.10
   # Step 3. In this_file, Expose the `TOPIC_NAME` to `environment` variables using the `${self:custom.topicName}` reference #
-  # Step 4. In this_file, Create the IAM role `iamRoleStatements` needed to `sns:Publish`
-  # Narrow the scope of the permission to the sns in this service
+  # Step 4. In this_file, Create the IAM role `iamRoleStatements` needed to `sns:Publish`. This allows for our `eventProducer` function to publish messages to our SNS topic.
