--- a/_instructor/core-concepts/7-using-serverless-plugins/serverless.yml
+++ b/_instructor/core-concepts/7-using-serverless-plugins/serverless.yml
@@ -3,7 +3,7 @@ service: using-serverless-plugins
 
 # FINAL_START
 plugins:
-  - serverless-stack-output
+  - serverless-manifest-plugin
 
 custom:
   output:
