--- a/_instructor/events/s3/serverless.yml
+++ b/_instructor/events/s3/serverless.yml
@@ -13,7 +13,7 @@ custom:
 
 provider:
   name: aws
-  runtime: nodejs6.10
+  runtime: nodejs12.x
   # WORKSHOP_START
   # Step 4. In this_file, Expose the `bucketName` to `environment` variables #
   # WORKSHOP_END
