--- a/_instructor/events/sns/sns-basic/serverless.yml
+++ b/_instructor/events/sns/sns-basic/serverless.yml
@@ -10,7 +10,7 @@ custom:
 
 provider:
   name: aws
-  runtime: nodejs6.10
+  runtime: nodejs12.x
   # WORKSHOP_START
   # Step 3. In this_file, Expose the `TOPIC_NAME` to `environment` variables using the `${self:custom.topicName}` reference #
   # WORKSHOP_END
