--- a/lessons-code-complete/core-concepts/2-http-dynamic-content/serverless.yml
+++ b/lessons-code-complete/core-concepts/2-http-dynamic-content/serverless.yml
@@ -3,7 +3,7 @@ service: using-dynamic-value
 
 provider:
   name: aws
-  runtime: nodejs6.10
+  runtime: nodejs12.x
 
 functions:
   queryParamsExample:
