--- a/lessons-code-complete/core-concepts/6-using-addition-resources/serverless.yml
+++ b/lessons-code-complete/core-concepts/6-using-addition-resources/serverless.yml
@@ -3,7 +3,7 @@ service: event-driven-app
 
 provider:
   name: aws
-  runtime: nodejs6.10
+  runtime: nodejs12.x
   environment:
     # Here we reference the table name defined below. This is a cloud formation ref
     MY_TABLE: { Ref: myDynamoTable }
