--- a/lessons-code-complete/core-concepts/8-using-multiple-stages/serverless.yml
+++ b/lessons-code-complete/core-concepts/8-using-multiple-stages/serverless.yml
@@ -6,7 +6,7 @@ custom:
 
 provider:
   name: aws
-  runtime: nodejs6.10
+  runtime: nodejs12.x
   stage: ${self:custom.stage}
   environment:
     MY_STAGE_SPECIFIC_VAR: ${file(./config.${self:custom.stage}.json):projectName}
