--- a/lessons-code-complete/events/dynamodb-streams/serverless.yml
+++ b/lessons-code-complete/events/dynamodb-streams/serverless.yml
@@ -3,7 +3,7 @@ service: event-driven-app
 
 provider:
   name: aws
-  runtime: nodejs6.10
+  runtime: nodejs12.x
   environment:
     MY_TABLE: { Ref: myDynamoTable }
   iamRoleStatements:
