--- a/lessons-code-complete/events/kinesis/kinesis-basic/serverless.yml
+++ b/lessons-code-complete/events/kinesis/kinesis-basic/serverless.yml
@@ -7,7 +7,7 @@ custom:
 
 provider:
   name: aws
-  runtime: nodejs6.10
+  runtime: nodejs12.x
   stage: ${self:custom.stage}
 
 # `processEvents` is trigged by the kinesis stream
