--- a/lessons-code-complete/events/s3/serverless.yml
+++ b/lessons-code-complete/events/s3/serverless.yml
@@ -7,7 +7,7 @@ custom:
 
 provider:
   name: aws
-  runtime: nodejs6.10
+  runtime: nodejs12.x
   environment:
     BUCKET_NAME: ${self:custom.bucketName}
   iamRoleStatements:
