--- a/lessons-code-complete/events/step-functions/serverless.yml
+++ b/lessons-code-complete/events/step-functions/serverless.yml
@@ -10,7 +10,7 @@ plugins:
 
 provider:
   name: aws
-  runtime: nodejs6.10
+  runtime: nodejs12.x
   stage: ${self:custom.stage}
   environment:
     STATE_MACHINE_ARN: ${self:resources.Outputs.MyStateMachine.Value}
